--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.5.0
 distlib==0.3.4
+dj-database-url==1.0.0
 Django==4.0.2
 django-ckeditor==6.4.2
 django-crispy-forms==1.14.0
@@ -19,3 +20,4 @@ six==1.16.0
 sqlparse==0.4.2
 tzdata==2021.5
 virtualenv==20.13.1
+whitenoise==6.2.0
