--- a/project_dump.json
+++ b/project_dump.json
@@ -358,4 +358,9 @@
             "blog"
         ],
         "object_id": "5",
-        "object_repr": 
+        "object_repr": "Worshippers in the Order of Everlasting Life",
+        "action_flag": 1,
+        "change_message": "[{\"added\": {}}]"
+    }
+}
+]
